--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -239,7 +239,7 @@
     ],
     "Contact.Pretitle": "What’s Next",
     "Contact.Title": "Get in touch!",
-    "Contact.Content": "I will be happy to receive your contact if you want to talk about new opportunities. Write me, and I will reply as soon as I see your message. Simple one-page design that features a profile letter with basic information about a person.",
+    "Contact.Content": "We will be happy to receive your contact if you want to talk about new opportunities. Write us, and we will reply as soon as we see your message.",
     "Contact.Btn": "Say Hello"
 
 
