--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -43,6 +43,8 @@
     "SectorName": "اسم القطاع",
     "ValuePercentage": "نسبة القيمة",
     "Currency": "العملة",
+    "First": "الأولى",
+    "Last": "الأخيرة",
     "Ask": "سعر الطلب",
     "Bid": "سعر العرض",
     "LastUpdated": "آخر تحديث",
@@ -127,6 +129,7 @@
     "ContactUs.RequiredField": "هذه الخانة مطلوبة",
     "ContactUs.InvalidEmail": "هذا الإيميل خاطئ",
     "ContactUs.OurLocation": "موقعنا",
+    "ContactUs.Location" : "الإمام علي هيليوبليس 6",
     "ultimateTrade" : "Ultimate Trade",
     "eTrade" : "eTrade",
     "openAccount" : "فتح حساب",
