--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -44,6 +44,8 @@
     "Currency": "Currency",
     "Ask": "Ask",
     "Bid": "Bid",
+    "First": "First",
+    "Last": "Last",
     "LastUpdated": "Last Updated",
     "OtherProjects.Title": "Trading rules",
     "Name": "Name",
@@ -125,6 +127,7 @@
     "ContactUs.PhoneNumber": "Phone:",
     "ContactUs.RequiredField": "This field is required",
     "ContactUs.OurLocation": "Our Location",
+    "ContactU.Location" : "6 El Imam Ali Helioplies",
     "ultimateTrade" : "Ultimate Trade",
     "eTrade" : "eTrade",
     "openAccount" : "Open Account",
