--- a/docs/assets/i18n/ar.json
+++ b/docs/assets/i18n/ar.json
@@ -7,6 +7,7 @@
     "Header.Item5": "احصائيات السوق",
     "Header.Item6": "تواصل معنا",
     "Contact.Title": "تواصل معنا",
+    "Header.Item7": "الأجندة",
     "News.Title": "الأخبار",
     "ContactUs.Title": "تواصل معنا",
     "Contact.Content": "يسعدنا تلقي اتصالك إذا كنت ترغب في التحدث عن فرص جديدة. اكتب لنا وسنرد عليك بأسرع ما يمكن بعد رؤية رسالتك.",
@@ -114,6 +115,26 @@
     "LocalNews": "الأخبار المحلية",
     "InternationalNews": "الأخبار الدولية",
     "News.ReadMore": "اقرأ المزيد 🡰",
+    "News.Back": "عودة ←",
+    "News.Next" : "التالي",
+    "News.Previous" : "السابق",
+    "News.Page" : "صفحة",
+    "News.Of" : "من",
+    "Dividends" : "الكوبونات",
+    "Company": "اسم الورقة",
+    "Timing": "التوقيت",
+    "Number" : "العدد",
+    "ClosePrice" : "سعر الإغلاق",
+    "TransType" : "نوع العملية",
+    "CompanyName" : "اسم الشركة",
+    "InsiderActions" : "التعاملات الداخلية",
+    "There's no information availabe" : "لا يوجد بيانات متوفرة",
+    "DistributionDate" : "تاريخ التوزيع",
+    "Distribution" : "التوزيع",
+    "MaturityDate" : "تاريخ الاستحقاق",
+    "PayDate" : "تاريخ الدفع",
+    "BonusShares" : "توزيع الأرباح",
+    "GeneralAssemblies": "الجمعيات العمومية",
     "ContactUs.YourName": "اسمك",
     "ContactUs.YourMessage": "رسالتك",
     "ContactUs.Email": "عنوان البريد الإلكتروني",
