--- a/docs/assets/i18n/en.json
+++ b/docs/assets/i18n/en.json
@@ -7,6 +7,7 @@
     "Header.Item5": "Market Statistics",
     "Header.Item6": "Contact us",
     "Contact.Title": "Contact Us",
+    "Header.Item7": "Agenda",
     "News.Title": "News",
     "ContactUs.Title": "Contact Us",
     "Contact.Content": "We will be happy to receive your contact if you want to talk about new opportunities. Write us, and we will reply as soon as we see your message.",
@@ -113,6 +114,24 @@
     "LocalNews": "Local News",
     "InternationalNews": "International News",
     "News.ReadMore": "Read more 🡰",
+    "News.Back": "Back ←",
+    "News.Next" : "Next",
+    "News.Previous" : "Previous",
+    "News.Page" : "Page",
+    "News.Of" : "Of",
+    "Dividends" : "Dividends",
+    "BonusShares" : "Bonus Shares",
+    "GeneralAssemblies": "General Assemblies",
+    "Company": "Company",
+    "Number" : "Number",
+    "ClosePrice" : "Close Price",
+    "TransType" : "Transaction Type",
+    "CompanyName" : "Company Name",
+    "InsiderActions" : "Insider Actions",
+    "DistributionDate" : "Distribution Date",
+    "Distribution" : "Distribution",
+    "MaturityDate" : "Maturity Date",
+    "PayDate" : "Pay Date",
     "ContactUs.YourName": "Your Name",
     "ContactUs.YourMessage": "Your Message",
     "ContactUs.Email": "Email Address",
