--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -124,13 +124,20 @@
     "Company": "اسم الورقة",
     "Timing": "التوقيت",
     "Number" : "العدد",
-    "There's no information availabe" : "لا يوجد بيانات متوفرة",
+    "ClosePrice" : "سعر الإغلاق",
+    "TransType" : "نوع العملية",
+    "CompanyName" : "اسم الشركة",
+    "InsiderActions" : "التعاملات الداخلية",
+    "There's no information available" : "لا يوجد بيانات متوفرة",
+    "CompaniesFinancialStatements" : "مراكز المالية",
     "DistributionDate" : "تاريخ التوزيع",
     "Distribution" : "التوزيع",
     "MaturityDate" : "تاريخ الاستحقاق",
     "PayDate" : "تاريخ الدفع",
+    "Header" : "العنوان",
     "BonusShares" : "توزيع الأرباح",
     "GeneralAssemblies": "الجمعيات العمومية",
+    "AuditReports" : "تقارير المراجعة",
     "ContactUs.YourName": "اسمك",
     "ContactUs.YourMessage": "رسالتك",
     "ContactUs.Email": "عنوان البريد الإلكتروني",
