--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -49,6 +49,7 @@
     "Last": "Last",
     "LastUpdated": "Last Updated",
     "OtherProjects.Title": "Trading rules",
+    "CompaniesFinancialStatements" : "Companies Financial Statements",
     "Name": "Name",
     "Size": "Size",
     "Date": "Date",
@@ -122,8 +123,13 @@
     "Dividends" : "Dividends",
     "BonusShares" : "Bonus Shares",
     "GeneralAssemblies": "General Assemblies",
+    "AuditReports" : "Audit Reports",
     "Company": "Company",
     "Number" : "Number",
+    "ClosePrice" : "Close Price",
+    "TransType" : "Transaction Type",
+    "CompanyName" : "Company Name",
+    "InsiderActions" : "Insider Actions",
     "DistributionDate" : "Distribution Date",
     "Distribution" : "Distribution",
     "MaturityDate" : "Maturity Date",
