new details added

--- a/docs/assets/i18n/ar.json
+++ b/docs/assets/i18n/ar.json
@@ -57,6 +57,7 @@
     "Download": "تحميل",
     "Integrity": "النزاهة",
     "Loyalty": "الولاء",
+    "Announcements" : "إعلانات الشركة",
     "Creativity": "الإبداع",
     "Passion": "الشغف",
     "Integrity.Image": "assets/images/Integrity.jpeg",
@@ -128,13 +129,16 @@
     "TransType" : "نوع العملية",
     "CompanyName" : "اسم الشركة",
     "InsiderActions" : "التعاملات الداخلية",
-    "There's no information availabe" : "لا يوجد بيانات متوفرة",
+    "There's no information available" : "لا يوجد بيانات متوفرة",
+    "CompaniesFinancialStatements" : "مراكز المالية",
     "DistributionDate" : "تاريخ التوزيع",
     "Distribution" : "التوزيع",
     "MaturityDate" : "تاريخ الاستحقاق",
     "PayDate" : "تاريخ الدفع",
+    "Header" : "العنوان",
     "BonusShares" : "توزيع الأرباح",
     "GeneralAssemblies": "الجمعيات العمومية",
+    "AuditReports" : "تقارير المراجعة",
     "ContactUs.YourName": "اسمك",
     "ContactUs.YourMessage": "رسالتك",
     "ContactUs.Email": "عنوان البريد الإلكتروني",
