--- a/docs/assets/i18n/en.json
+++ b/docs/assets/i18n/en.json
@@ -49,6 +49,7 @@
     "Last": "Last",
     "LastUpdated": "Last Updated",
     "OtherProjects.Title": "Trading rules",
+    "CompaniesFinancialStatements" : "Companies Financial Statements",
     "Name": "Name",
     "Size": "Size",
     "Date": "Date",
@@ -122,6 +123,7 @@
     "Dividends" : "Dividends",
     "BonusShares" : "Bonus Shares",
     "GeneralAssemblies": "General Assemblies",
+    "AuditReports" : "Audit Reports",
     "Company": "Company",
     "Number" : "Number",
     "ClosePrice" : "Close Price",
