--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -57,6 +57,7 @@
     "Download": "تحميل",
     "Integrity": "النزاهة",
     "Loyalty": "الولاء",
+    "Announcements" : "إعلانات الشركة",
     "Creativity": "الإبداع",
     "Passion": "الشغف",
     "Integrity.Image": "assets/images/Integrity.jpeg",
