--- a/docs/assets/i18n/ar.json
+++ b/docs/assets/i18n/ar.json
@@ -92,7 +92,7 @@
     "EGXSummary.Columns": {
         "Name": "الاسم",
         "Value": "القيمة",
-        "Difference": "الفرق"
+        "Difference": "التغيّر"
     },
     "TradingSummary.Columns": {
         "Name": "الاسم",
