--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -91,7 +91,7 @@
     "EGXSummary.Columns": {
         "Name": "Name",
         "Value": "Value",
-        "Difference": "Difference"
+        "Difference": "Change"
     },
     "TradingSummary.Columns": {
         "Name": "Name",
