navy color for header

--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -85,6 +85,7 @@
     "Mission.Image": "assets/images/vision2.jpeg",
     "Vision.Image": "assets/images/vision3.jpeg",
     "MarketStatistics.Title": "إحصائيات السوق",
+    "AboutPioneers.Title" : "عن بايونيرز",
     "MarketSummary.Title": "ملخص السوق",
     "EGXSummary.Title": "ملخص EGX",
     "TradingSummary.Title": "ملخص التداول",
