--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -22,6 +22,7 @@
     "EGX30": "EGX30",
     "MoneyFlows.Title": "Money Flows",
     "MarketStatus.Title": "Market Status",
+    "AboutPioneers.Title" : "About Pioneers",
     "Gainers": "Gainers",
     "Losers": "Losers",
     "Unchanged": "Unchanged",
