--- a/docs/assets/i18n/ar.json
+++ b/docs/assets/i18n/ar.json
@@ -67,6 +67,9 @@
     "Announcements" : "إعلانات الشركة",
     "Creativity": "الإبداع",
     "Passion": "الشغف",
+    "Professionalism": "الاحترافية",
+    "Entrepreneurship": "الريادة",
+    "Innovation": "الابتكار",
     "Integrity.Image": "assets/images/Integrity.jpeg",
     "Loyalty.Image": "assets/images/Loyalty.jpeg",
     "Creativity.Image": "assets/images/Creativity.jpeg",
