--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -9,6 +9,7 @@
     "Contact.Title": "تواصل معنا",
     "Header.Item7": "الأجندة",
     "Header.Item8": "شركات",
+    "Header.Item9": "التنزيلات",
     "News.Title": "الأخبار",
     "Trade Now" : "تداول الآن",
     "Ultimate Trade": "تداول ألتميمت",
