--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -9,6 +9,7 @@
     "Contact.Title": "Contact Us",
     "Header.Item7": "Agenda",
     "Header.Item8": "Companies",
+    "Header.Item9": "Downloads",
     "News.Title": "News",
     "ContactUs.Title": "Contact Us",
     "Contact.Content": "We will be happy to receive your contact if you want to talk about new opportunities. Write us, and we will reply as soon as we see your message.",
