backgroud photo added

--- a/docs/assets/i18n/ar.json
+++ b/docs/assets/i18n/ar.json
@@ -9,6 +9,8 @@
     "Contact.Title": "تواصل معنا",
     "Header.Item7": "الأجندة",
     "Header.Item8": "شركات",
+    "Header.Item9": "التنزيلات",
+    "Header.Item10": "قواعد التداول",
     "News.Title": "الأخبار",
     "Trade Now" : "تداول الآن",
     "Ultimate Trade": "تداول ألتميمت",
@@ -76,6 +78,7 @@
     "Passion.Image": "assets/images/passion.jpeg",
     "CoreValues.Description": "بينما نضع رأسمالنا في خلق أعمال جذابة للغاية تنمو لتصبح قادة في قطاعاتها، نركز على إقامة أعلى معايير الاحترافية، وتعزيز تنفيذ دقيق يتجذر في ممارسات الأعمال الأخلاقية، وزراعة شبكة أعمال إقليمية متميزة. لتحقيق ذلك، استثمرنا بشكل كبير في بناء بيئة عمل عالمية المستوى حيث نعمل على أن نصبح صاحب العمل المفضل مع الحفاظ على ثقافة ريادية تجذب وتكافئ وتحتفظ بأفضل المواهب المحلية والدولية.",
     "WhoWeAre.Title": "من نحن",
+    "WhoWeAre.ReadMore": "قراءة المزيد ➔",
     "Mission.Title": "الرسالة",
     "Vision.Title": "الرؤية",
     "WhoWeAre.Content": "نحن شركة قابضة متكاملة بالكامل بمحفظة متنوعة، تستهدف فرص الأعمال الجذابة لخلق قيمة للمساهمين على المدى الطويل، ليس فقط في مصر ومنطقة الشرق الأوسط وشمال إفريقيا ولكن على مستوى العالم. نستفيد من معرفتنا المحلية العميقة، وسجلنا الحافل، وشبكاتنا التجارية الواسعة لتحديد الفائزين الواضحين وكشف قيمتهم الجوهرية، حيث يعمل رأس مالنا في أكثر من 50 شركة محفظة توظف حوالي 6000 شخص.",
@@ -86,6 +89,7 @@
     "Vision.Image": "assets/images/vision3.jpeg",
     "MarketStatistics.Title": "إحصائيات السوق",
     "AboutPioneers.Title" : "عن بايونيرز",
+    "AboutUS.Title" : "عن بايونيرز",
     "MarketSummary.Title": "ملخص السوق",
     "EGXSummary.Title": "ملخص EGX",
     "TradingSummary.Title": "ملخص التداول",
