--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -10,6 +10,7 @@
     "Header.Item7": "Agenda",
     "Header.Item8": "Companies",
     "Header.Item9": "Downloads",
+    "Header.Item10": "Trading Rules",
     "News.Title": "News",
     "ContactUs.Title": "Contact Us",
     "Contact.Content": "We will be happy to receive your contact if you want to talk about new opportunities. Write us, and we will reply as soon as we see your message.",
@@ -24,6 +25,7 @@
     "MoneyFlows.Title": "Money Flows",
     "MarketStatus.Title": "Market Status",
     "AboutPioneers.Title" : "About Pioneers",
+    "AboutUS.Title" : "About Us",
     "Gainers": "Gainers",
     "Losers": "Losers",
     "Unchanged": "Unchanged",
@@ -68,6 +70,7 @@
     "Passion.Image": "assets/images/passion.jpeg",
     "CoreValues.Description": "As we put our capital to work in creating highly attractive businesses that grow into leaders in their sectors, we focus on establishing the highest standards of professionalism, promoting highly focused execution entrenched in ethical business practices, and cultivating a distinctive regional business network. To do this, we've invested heavily in building a world-class work environment as we work toward becoming an employer of choice while maintaining an enterprising culture that attracts, rewards, and retains top local and international talents.",
     "WhoWeAre.Title": "Who We Are",
+    "WhoWeAre.ReadMore": "Read More ➔",
     "Mission.Title": "Mission",
     "Vision.Title": "Vision",
     "WhoWeAre.Content": "We are a fully integrated investment holding company with a diverse portfolio, targeting compelling business opportunities to create superior shareholder value over the long term, not only in Egypt and the MENA region but globally. Tapping into our deep local knowledge, proven track record, and extensive business networks to identify clear winners and unlock their inherent value, our capital is at work in over 50 portfolio companies that employ c. 6,000 people.",
